--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Rajeev Kenkere</h1>
+  <h1>Partner</h1>
   <app-navbar></app-navbar>
 </body>
 </html>
